--- a/index (1).html
+++ b/index (1).html
@@ -197,7 +197,7 @@
       <div class="profile-image">
         👨‍💻
       </div>
-      <h1 class="name">Sadineni Amrutha</h1>
+      <h1 class="name">TULASI VASUDHA</h1>
       <p class="title">Web Developer</p>
       
       <div class="contact-info">
